finished work with animation and adaptation

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <img class="icons " src="images/new-technology.png" alt="img">
                 <p>New technology</p>
             </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6">
+            <div class="signal col-xl-3 col-lg-3 col-md-3 col-sm-6">
                 <img class="icons" src="images/good-signal.png" alt="img">
                 <p>Good signal</p>
             </div>
@@ -106,10 +106,10 @@
         </div>
         <div class="gener col-xl-6 col-lg-6 col-md-6 col-sm-12">
             <h1 id="fluidText" class="text-color-white">New <span>generation</span>  of vision<span>.</span></h1>
-            <p class="hiden text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque ducimus,
-                perspiciatis possimus repellat rerum voluptate.</p>
+            <p class="hiden text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aliquid
+                aperiam, asperiores commodi consequatur cum dicta dignissimos distinctio earum et facere ipsa ipsum
+                laboriosam molestiae molestias, mollitia omnis provident quaerat quasi velit veritatis voluptatem.</p>
             <button id="visMore" class="btn btn-transp">view more</button>
-
             <img src="images/icon-dr.png" class="fon-dron" alt="dron">
         </div>
     </div>
@@ -119,21 +119,28 @@
     <div class="row marg-0 pading-cont">
         <div class="new-flying col-xl-6 col-lg-6 col-md-6 col-sm-12 pad-0">
             <h1 class="text-black">New <span>generation</span>  of vision<span>.</span></h1>
+            <p class="hiden-fly text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus commodi
+                cum cumque deleniti ea eligendi eos eum ex id illo labore molestias obcaecati odio, officiis pariatur
+                placeat provident, recusandae sapiente similique ullam vero voluptate voluptatem.</p>
             <button id="new-gener" class="btn btn-prod">Products</button>
         </div>
         <div class="fl-dron col-xl-6 col-lg-6 col-md-6 col-sm-12 pad-0">
             <img src="images/dronesss.png" alt="dron">
         </div>
-
-
     </div>
 
     <!--Start section-->
     <div class="row marg-0">
         <div class="start pad-0 col-xl-12">
             <img src="images/start.png" alt="Aqua sea">
-            <h1>Start your journey.</h1>
-            <button id="" class="btn">View more</button>
+            <div class="absolut">
+                <h1 class="text-color-white">Start your journey.</h1>
+                <p class="hiden-start text-pink">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, consequatur
+                    dicta, dolore doloribus eaque harum molestias nesciunt officia officiis quaerat quasi recusandae
+                    repellendus voluptas? Accusantium aliquam autem dicta ducimus exercitationem hic impedit nobis,
+                    officia, pariatur quae, quo ratione voluptate voluptates.</p>
+                <button id="startBtn" class="btn">View more</button>
+            </div>
         </div>
     </div>
 
@@ -141,15 +148,11 @@
     <!--Finish content-->
 
     <footer class="footer">
-        <div class="container foot-container">
-
-            <!--<p class="upper fon-foot-text">Phantom</p>-->
-
-            <div class="">
-                <h5 class="upper">Mars</h5>
-                <p class="text-gray">2016 Copyright. All rights reserved by Symu.co</p>
-            </div>
+        <div class="foot-content">
+            <h5 class="upper">Mars</h5>
+            <p class="text-gray">2016 Copyright. All rights reserved by Symu.co</p>
         </div>
+        <p class="upper fon-foot-text">Phantom</p>
     </footer>
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
