wrote js for buttons

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p class="hiden text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aliquid
                 aperiam, asperiores commodi consequatur cum dicta dignissimos distinctio earum et facere ipsa ipsum
                 laboriosam molestiae molestias, mollitia omnis provident quaerat quasi velit veritatis voluptatem.</p>
-            <button id="visMore" class="btn btn-transp">view more</button>
+            <button id="visMore" class="btn btn-transp">View more</button>
             <img src="images/icon-dr.png" class="fon-dron" alt="dron">
         </div>
     </div>
