--- a/index.html
+++ b/index.html
@@ -24,11 +24,20 @@
                         </a>
                     </div>
                     <div class="text-end offset-xl-6 col-xl-2 offset-lg-5 col-lg-3 offset-md-4 col-md-3">
-                        <a href="#" class="upper buy text-white"> Buy now</a>
-                        <button>menu</button>
+                        <a href="#" class="upper buy text-white">Buy now</a>
+                        <button class="btn-menu">Menu</button>
                     </div>
                 </div>
             </div>
+            <nav id="menu" class="menu-bar">
+                <ul>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Clients</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
         <div class="mars">
@@ -37,15 +46,14 @@
 
         <div class="container">
             <div class="row">
-                <div class="slider col-xl-4 col-lg-4 col-md-12">
+                <div class="slider col-xl-4 col-lg-4 col-md-4 col-sm-12">
 
                     <h2 class="upper">Phantom</h2>
                     <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget euismod dolor.</p>
-
                 </div>
-                <div class="col-xl-8 col-lg-8 col-md-12 row justify-content-center">
+                <div class="col-xl-8 col-lg-8 col-md-8 row justify-content-center">
                     <div class="block-contain">
-                        <img src="images/2-layers.png" class="dron " alt="Dron">
+                        <img src="images/2-layers.png" class="dron" alt="Dron">
                     </div>
                 </div>
             </div>
