--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">                                                                <!--На мобильных неправильно отображается контент!!!!!-->
+
     <title>Mars</title>
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
@@ -15,17 +16,17 @@
     <div class="header-wrap">
 
         <header class="header">
-            <div class="container">   <!--container-fluid-->
-                <div class="row align-items-center">
+            <div class="container">
+                <div class="row pad-0 align-items-center">
                     <div class="row col-xl-4 col-lg-4 col-md-5 col-sm-12">
                         <p class="logo upper text-black">Mars</p>
                         <a href="tel:+48 604 300 500" class="phone text-gray">
                             <i class="fa fa-phone" aria-hidden="true"></i>+48 604 300 500
                         </a>
                     </div>
-                    <div class="text-end offset-xl-6 col-xl-2 offset-lg-5 col-lg-3 offset-md-4 col-md-3">
+                    <div class="text-end pad-0 offset-xl-6 col-xl-2 offset-lg-5 col-lg-3 offset-md-4 col-md-3">
                         <a href="#" class="upper buy text-white">Buy now</a>
-                        <button class="btn-menu">Menu</button>
+                        <button class="btn-menu"></button>
                     </div>
                 </div>
             </div>
@@ -39,6 +40,7 @@
                 </ul>
             </nav>
         </header>
+
 
         <div class="mars">
             <p class="text-mars">mars</p>
@@ -84,7 +86,6 @@
             </div>
         </div>
     </div>
-
 
     <!--Start content-->
 
@@ -160,7 +161,7 @@
     <div class="row marg-0">
         <div class="start pad-0 col-xl-12">
             <img src="images/start.png" alt="Aqua sea">
-            <div class="absolut">
+            <div class="start-text">
                 <h1 class="text-color-white">Start your journey.</h1>
                 <p class="hiden-start text-pink">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, consequatur
                     dicta, dolore doloribus eaque harum molestias nesciunt officia officiis quaerat quasi recusandae
@@ -181,10 +182,10 @@
         <p class="upper fon-foot-text">Phantom</p>
     </footer>
 
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/tether/dist/js/tether.min.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="js/swiper.min.js"></script>
-<script src="js/script.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/tether/dist/js/tether.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/swiper.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
